<resources>
    <string name="app_name">developers</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="name_1">JELWIN RODRIGUES</string>
    <string name="email_1">EMAIL: jelwin13afc@gmail.com</string>
    <string name="name_2">SHUSRUTH V</string>
    <string name="email_2">EMAIL: vsushruth21@gmail.com</string>
    <string name="name_3">ANKIT JAIN</string>
    <string name="email_3">EMAIL: anku.171co208@nitk.edu.in</string>
    <string name="name_4">CHETAN AGARWAL</string>
    <string name="email_4">EMAIL: chetanag35@gmail.com</string>
    <string name="name_5">NIKHIL H S</string>
    <string name="email_5">EMAIL :nkhl4199@gmail.com</string>
    <string name="name_6">SIDDARTH SINGH</string>
    <string name="email_6">EMAIL: siddharth12375@gmail.com</string>
</resources>
