<?xml version="1.0" encoding="utf-8"?>




<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue"
    android:visibility="visible">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage1"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_3"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email1"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_3"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage2"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name2"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_4"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email2"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_4"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage3"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name3"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_1"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email3"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_1"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage4"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name4"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_5"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email4"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_5"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage5"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name5"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_6"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email5"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_6"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/postImage6"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/action_settings"
                    android:scaleType="centerCrop"
                    app:srcCompat="@mipmap/ic_launcher" />


                <TextView
                    android:id="@+id/name6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/name_2"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_green_dark"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/email6"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/email_6"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>


</ScrollView>


